[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chainlit>=2.9.3",
    "fastapi>=0.124.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.4.0",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]
